All section styles added to structure the design

--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
     <div class="page-wrapper">
         <!-- Hero Section -->
         <div class="hero-sec">
-            <div class="hero-col-left">
-                <div class="content-container">
-                    <h1 class="hero-heading">Discover Sustainable Living</h1>
-                    <p class="hero-paragraph">Explore Our Eco-Friendly Products and Make a Positive Impact</p>
-                    <span class="primary-btn hero-btn">Shop Now</span>                  
+            <div class="hero-inner-container">
+                <div class="hero-col-left">
+                    <div class="content-container">
+                        <h1 class="hero-heading">Discover Sustainable Living</h1>
+                        <p class="hero-paragraph">Explore Our Eco-Friendly Products and Make a Positive Impact</p>
+                        <span class="primary-btn hero-btn">Shop Now</span>                  
+                    </div>
+                </div>
+                <div class="hero-col-right">
+                    <div class="img-container">
+                        <img src="assets/images/cover.jpg" alt="hero-image">
+                    </div>
                 </div>
             </div>
-            <div class="hero-col-right">
-                <div class="img-container">
-                    <img src="assets/images/cover.jpg" alt="hero-image">
-                </div>
-            </div>
+            
         </div>
         <!-- Product Section -->
         <div class="product-sec">
@@ -115,7 +118,7 @@
             </div>
         </div>
         <!-- CTA Section -->
-        <div class="cta">
+        <div class="cta-sec">
             <div class="cta-inner-container">
                 <div class="col-left">
                     <h2 class="cta-heading">Join the Eco-Friendly Movement</h2>
