Styles added to all elements. Project Objectives Completed

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="testimonial-inner-container">
                 <span class="testimonial-wrapper">
                     <p class="testimonial-content">
-                        I love my bamboo toothbrush! It feels great to make a small change for our planet.
+                        "Celebrating the eco-friendly shift with these products has been incredible. The bamboo toothbrushes are a hit in our family, and the reusable bags have become a shopping essential. Thanks to this, we're reducing our carbon footprint effortlessly!"
                     </p>
                 </span>
             </div>
@@ -125,7 +125,7 @@
                     <p class="cta-content">Ready to make a difference? Shop our sustainable products and take a step toward a greener future.</p>
                 </div>
                 <div class="col-right">
-                    <span class="cta-btn">Shop Now</span>
+                    <span class="cta-btn hero-btn">Shop Now</span>
                 </div>
             </div>
         </div>
